[workspace]
members = [
    "node",
    "pallets/energy-generation",
    "pallets/reputation",
    "pallets/simple-staking",
    "precompiles/balances-erc20",
    "precompiles/utils",
    "runtime",
]
resolver = "2"

[workspace.package]
authors = ["Innowise FinTech Team"]
edition = "2021"
repository = "https://bitbucket.org/innowise-group/vitreus-power-plant"

[workspace.dependencies]
affix = "0.1"
bn = { package = "substrate-bn", version = "0.6", default-features = false }
derive_more = "0.99"
environmental = { version = "1.1", default-features = false }
ethereum = { version = "0.14", default-features = false }
ethereum-types = { version = "0.14", default-features = false }
evm = { version = "0.39", default-features = false }
hex = { version = "0.4", default-features = false }
hex-literal = { version = "0.3" }
impl-serde = { version = "0.4", default-features = false }
impl-trait-for-tuples = "0.2"
jsonrpsee = "0.16"
kvdb-rocksdb = "0.17"
libsecp256k1 = { version = "0.7", default-features = false }
log = { version = "0.4", default-features = false }
num_enum = { version = "0.6", default-features = false }
parity-db = "0.4"
rand_chacha = { version = "0.2", default-features = false }
rlp = { version = "0.5", default-features = false }
parity-scale-codec = { version = "3.2", default-features = false, features = [
    "derive",
] }
paste = "1.0"
scale-info = { version = "2.3", default-features = false, features = [
    "derive",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = { version = "0.10", default-features = false }
similar-asserts = "1.4"
sqlx = "0.7.0-alpha.3"
slices = "0.2"
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42", default-features = false }

sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-network-sync = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
# Substrate Primitive
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-database = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
# Substrate FRAME
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
pallet-bags-list = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false, features = [
    "historical",
] }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
pallet-uniques = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }

# Substrate Utility
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
# Frontier Client
fc-cli = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
fc-consensus = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
fc-db = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
fc-mapping-sync = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
fc-storage = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
# Frontier Primitive
fp-account = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
fp-consensus = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
fp-dynamic-fee = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
fp-ethereum = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
fp-self-contained = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
fp-storage = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
# Frontier FRAME
pallet-base-fee = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
pallet-dynamic-fee = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
pallet-ethereum = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
pallet-evm-chain-id = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
pallet-evm-test-vector-support = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
pallet-hotfix-sufficients = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
# Moonbeam
precompile-utils = { path = "precompiles/utils", default-features = false }
pallet-evm-precompile-balances-erc20 = { path = "precompiles/balances-erc20", default-features = false }
# Runtime
vitreus-power-plant-runtime = { path = "runtime", default-features = false }

pallet-energy-generation = { path = "pallets/energy-generation", default-features = false }
pallet-reputation = { path = "pallets/reputation", default-features = false }
pallet-simple-staking = { path = "pallets/simple-staking", default-features = false }
pallet-reputation = { path = "pallets/reputation", default-features = false }

# Arkworks
ark-bls12-377 = { version = "0.4.0", default-features = false, features = [
    "curve",
] }
ark-bw6-761 = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
